@@ -10,6 +10,7 @@ o Modified networking library to compile under MSVC
 + Add libtool builder for future use
 o Update project to successfully build MSVC dll/lib pair.
   This change includes lots of changes to configure, makefile, etc
+o Disable RANLIB if using MSVC as it corrupts the binary
 
 2006-05-24
 + Added a number of macros (cfg/msvc.cfg) to support compiling under MSVC enabled with --enable-msvc
